<resources>
    <string name="app_name">MosisApp</string>
    <string name="action_settings">Settings</string>
    <string name="service_description">"Allows for realtime updates and notifications."</string>

    <!-- Authentication -->
    <string name="sign_out_menu">Sign Out</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_realname">Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_phone">Phone number</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="action_sign_in_long">Sign in or register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_forgot_continue">Continue</string>

    <string name="message_forgot">Enter registered email to reset your password.</string>
    <string name="message_email_sent">Email has been sent</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_username">Username is invalid</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_invalid_picture">Picture is not set</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="error_short">too short</string>

    <string name="logo_description">fsociety</string>

    <!-- Profile -->
    <string name="default_text">Not set</string>
    <string name="mine_change_label">Change</string>
    <string name="mine_update_label">Update profile</string>

    <!-- Mapping -->
    <string name="default_info_title">Beaverhausen</string>
    <string name="default_info_snippet">Anastasia Beaverhausen</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- Blutooth -->
    <string name="bt_no_device">Bluetooth device not detected</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No paired devices</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">Please select device</string>
    <string name="scanning">Scanning…</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Found devices</string>
    <string name="not_connected">Not connected</string>
    <string name="title_connected_to">Connected to</string>
    <string name="title_connecting">Connecting…</string>
    <string name="title_not_connected">Not connected</string>
    <string name="title_all_devices">Devices available</string>
    <string name="bt_requests_message">Received Requests: None</string>
    <string name="username">username</string>
    <string name="full_name_filler">full name</string>

    <string name="friend_greeting">Hello. I am…</string>
    <string name="title_activity_place_add">Add Place</string>

    <!-- Places -->
    <string name="add_label_type">Type:</string>
    <string name="add_label_attribute">Attribute:</string>
    <string name="add_label_Description">Description</string>
    <string name="add_button_cancel">Cancel</string>
    <string name="add_button_post">Post</string>
    <string name="read_button_delete">Delete</string>

    <!-- Geofences -->
    <string name="geo_transition_entered">"Entered "</string>
    <string name="geo_transition_exited">"Exited "</string>
    <string name="geo_unknown_transition"/>
    <string name="geo_not_available">Geofence service is not available right now.</string>
    <string name="geo_too_many">Your app has registred too many geofences</string>
    <string name="geo_too_many_pending">You have provided too many PendingIntents to the addGeo…</string>
    <string name="geo_unknown_error">Unknown error: the Geofence service is not available right now.</string>

    <!-- Scoreboard -->
    <string name="title_activity_scoreboard">Top 10</string>

    <!-- MainService -->
    <string name="service_main_description">Enables notifications when users or places are near</string>
    <string name="radius_dialog_explanation">Please select radius to use when searching for places near you</string>


</resources>
