<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.demo.mosisapp.BluetoothFriendActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="Bluetooth Friends"/>

    </android.support.design.widget.AppBarLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>

<!-- Send request -->

    <LinearLayout
        android:id="@+id/bt_send_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="Send friend request"
            android:textAlignment="center"
            android:textAllCaps="true"/>
        <Button
            android:id="@+id/bt_request_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="Find people"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="@color/Grey_700"
        android:elevation="1dp"/>

<!-- Received request -->

    <TextView
        android:id="@+id/bt_status_received"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/bt_requests_message"
        android:textAlignment="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>

    <LinearLayout
        android:id="@+id/bt_received_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="4"
        android:visibility="gone">

        <ImageView
            android:id="@+id/request_pic"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:adjustViewBounds="false"
            android:contentDescription="@string/logo_description"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            android:src="@drawable/unknown_person_green"/>

        <TextView
            android:id="@+id/request_name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="8dp"
            android:text="@string/username"
            android:textAlignment="center"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/request_name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/full_name_filler"
            android:textAlignment="center"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/request_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Accept Request"/>

            <Button
                android:id="@+id/request_deny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Deny Request"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
